Fixed slider page overflow issue

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -43,7 +43,6 @@
       align-items: flex-start;
       width: 100vw;
       height: fit-content;
-      margin-top: 2em;
       padding: 30px 40px;
       position: fixed;
       top: 80px;
